[project]
name = "SHARKtools"
version = "1.0.0"
description = "SHARKtools is a plugin based GUI used to handle various workflows at SMHI"
authors = [
    {name = "Magnus Wenzer", email = "nodc@smhi.se"},
]
dependencies = [
    "screeninfo>=0.8.1",
    "pandas>=2.2.1",
    "cmocean>=4.0.3",
    "shark-tkinter-lib @ git+https://github.com/sharksmhi/shark_tkinter_lib.git",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "sharktools-ctd-pre-system @ file:///C:/mw/git/refac_sharktools/SHARKtools_pre_system_Svea",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["."]
